--- a/main.html
+++ b/main.html
@@ -1,2 +1,12 @@
-<html>
-</html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>FizzBuzz By Erin Hinkle</title>
+		<link rel="stylesheet" href="css/reset.css">
+		<!--<link rel="stylesheet" href="css/main.css">-->
+		<script src="js/jquery-1.11.js"></script>
+		<script src="js/app.js"></script>
+	</head>
+	<body>
+	</body>
+	</html>
