--- a/main.html
+++ b/main.html
@@ -8,5 +8,24 @@
 		<script src="js/app.js"></script>
 	</head>
 	<body>
+		<header>
+			<h1>FIZZ BUZZ!!</h1>
+		</header>
+		<form>
+			<button class="click" type="button">Click Here to Begin Fizz Buzzing from 1-999</button>
+		</form>
+		<div class="explain">
+			<h2>
+				<ul>
+					<li>This app will count from 1 to 999</li>
+					<li>Numbers divisible by 3 will show as "FIZZ!"</li>
+					<li>Numbers divisible by 5 will show as "BUZZ!"</li>
+					<li>Numbers divisible by 3 AND 5 will show as "FIZZBUZZ!!"</li>	
+				</ul>
+			</h2>	
+		</div>
+		<div class="call-results">
+			<h4>Results Display Below</h4>
+		</div>
 	</body>
 	</html>
