--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 			<h1>FIZZ BUZZ!!</h1>
 		</header>
 		<form>
-			<button class="click" type="button">Click Here to Begin Fizz Buzzing from 1-999</button>
+			<button class="click" type="button">Click Here to Begin The Fizz Buzz Fun!</button>
 		</form>
 		<div class="explain">
 			<h2>
@@ -25,7 +25,7 @@
 			</h2>	
 		</div>
 		<div class="call-results">
-			<h4>Results Display Below</h4>
+			<h6>Results Display Below</h6>
 		</div>
 	</body>
 	</html>
