--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 			<h1>FIZZ BUZZ!!</h1>
 		</header>
 		<form>
-			<button class="click" type="button">Click Here to Begin The Fizz Buzz Fun!</button>
+			<button class="initiate" type="button">Click Here to Begin The Fizz Buzz Fun!</button>
 		</form>
 		<div class="explain">
 			<h2>
@@ -26,6 +26,8 @@
 		</div>
 		<div class="call-results">
 			<h6>Results Display Below</h6>
+		</div>
+		<div class="results">
 		</div>
 	</body>
 	</html>
