--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 			<h1>FIZZ BUZZ!!</h1>
 		</header>
 		<form>
-			<button class="initiate" type="button">Click Here to Begin The Fizz Buzz Fun!</button>
+			<button class="initiate" type="button">Click Here To Begin The Fizz Buzz Fun!</button>
 		</form>
 		<div class="explain">
 			<h2>
